Fix the !ENABLE(WEB_TIMING) build https://bugs.webkit.org/show_bug.cgi?id=157515

Reviewed by Alex Christensen.

* loader/cache/CachedResourceLoader.cpp:
(WebCore::CachedResourceLoader::loadDone):


Canonical link: https://commits.webkit.org/175669@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200640 268f45cc-cd09-0410-ab3c-d52691b4dbfc